# aleo-wallet-test

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  transfer.tsx
wasm-lib/: Cargo.toml  build.rs
wasm-lib/src/: lib.rs  records.rs  transfer.rs  utils.rs
