[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["IronC <apehole@163.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build-dependencies]
snarkvm-algorithms = { version = "0.9.13", features = ["wasm"] }
snarkvm-console-network = { version = "0.9.13", features = ["wasm"] }
indexmap = { version = "1.9", features = ["serde"] }
snarkvm-synthesizer = { version = "0.9.13", features = ["wasm"] }
bincode = "1.3"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "Response", "Window", "console", "RequestMode"] }
snarkvm-console-program = { version = "0.9.13" }
snarkvm-console-account = { version = "0.9.13" }
snarkvm-console-network = { version = "0.9.13", features = ["wasm"] }
snarkvm-algorithms = { version = "0.9.13", features = ["wasm"] }
snarkvm-console-network-environment = "0.9.13"
snarkvm-utilities = "0.9.13"
snarkvm-synthesizer = { version = "0.9.13", features = ["wasm"] }
snarkvm-parameters = { version = "0.9.13", features = ["wasm"] }
anyhow = { version = "1.0.70" }
serde = "1"
serde_json = "1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
bincode = "1.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.indexmap]
version = "1.9"
features = ["serde", "rayon"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
